--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -5,3 +5,11 @@
   flex-wrap: wrap;
   gap: 10px;
 }
+.container {
+  display: flex;
+  flex-direction: column;
+}
+.loadingMessage {
+  margin: 25px 50px;
+  font-size: 25px;
+}
